Complete file Agent.ipynb.

--- a/ai_agent_project/Agent.ipynb
+++ b/ai_agent_project/Agent.ipynb
@@ -804,7 +804,7 @@
     "\n",
     "`LangGraph` 提供了这样的框架：将每个工具定义为有向图中的结点（node），通过有向边（edge）进行连接表示执行的流程，用图（Graph）的方式表示Agent的工作流程。每个结点包含一个状态，所有结点函数接收并返回这个结构。\n",
     "\n",
-    "下面通过一个文本分析总结Agent进行学习："
+    "下面通过一个文本分析总结工具进行学习："
    ]
   },
   {
@@ -1105,6 +1105,116 @@
     "\n",
     "# 生成的文本摘要\n",
     "print(\"\\nSummary:\", result[\"summary\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "352c5799",
+   "metadata": {},
+   "source": [
+    "## workflow.compile() 和 create_react_agent()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60516ea8",
+   "metadata": {},
+   "source": [
+    "上述的学习过程中，在带搜索功能的 chatbot 搭建过程中，我们定义了列表 `tool`，并通过 `create_react_agent(model, tool, checkpoint)` 方法创建了可invoke的对象。\n",
+    "\n",
+    "在后面的文本分析Agent中，我们是通过定义 `StateGraph` 的结点和边，并通过 `workflow.compile()` 编译有状态流程图得到可invoke的对象。\n",
+    "\n",
+    "两者之间有什么区别？什么时候使用哪一种方式得到 Agent 对象？"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43622f5c",
+   "metadata": {},
+   "source": [
+    "## 核心区别简述：\n",
+    "\n",
+    "| 特性   | `create_react_agent` 创建的 Agent | `workflow.compile()` 生成的 LangGraph 工作流 |\n",
+    "| ---- | ------------------------------ | -------------------------------------- |\n",
+    "| 架构   | 基于语言模型 + ReAct 推理循环            | 基于有状态的流程图（StateGraph）                  |\n",
+    "| 执行方式 | 单轮、动态决策循环                      | 多节点状态传递，流程可视化                          |\n",
+    "| 状态管理 | 无显式状态结构                        | 显式使用 `TypedDict` 进行状态管理                |\n",
+    "| 控制流程 | 黑盒式推理链（模型控制工具调用）               | 显式定义每个步骤与流程走向（开发者掌控）                   |\n",
+    "| 调试能力 | 难以追踪中间过程                       | 可逐步跟踪每个 node 的状态变更                     |\n",
+    "| 灵活性  | 快速实现标准 Agent                   | 适合复杂逻辑、多分支、多记忆任务                       |\n",
+    "| 可扩展性 | 限于模型驱动逻辑                       | 适合大型系统、对接数据库/API 等复杂场景                 |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 一、create\\_react\\_agent 是什么？\n",
+    "\n",
+    "`create_react_agent` 是 LangChain 中用于创建基于 ReAct（Reasoning + Acting）模式的 Agent。语言模型读取问题、决定是否调用工具、使用 Observation 更新思路，并最终给出答案。\n",
+    "\n",
+    "```python\n",
+    "from langchain.agents import create_react_agent, AgentExecutor\n",
+    "\n",
+    "agent = create_react_agent(llm=llm, tools=tools)\n",
+    "executor = AgentExecutor(agent=agent, tools=tools)\n",
+    "executor.invoke({\"input\": \"What's the capital of France?\"})\n",
+    "```\n",
+    "\n",
+    "### 特点：\n",
+    "\n",
+    "* 自动推理 + 工具调用（循环 ReAct）\n",
+    "* 可处理 open-ended 问题（如聊天问答）\n",
+    "* 每次调用是“闭环”思考过程\n",
+    "* 不需要开发者写每一步逻辑\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 二、workflow\\.compile() 是什么？\n",
+    "\n",
+    "这是 LangGraph 中构建工作流的核心步骤，它会把你定义的状态流程图（每个步骤对应一个函数、每条边对应状态变化）**编译成一个可执行的完整图对象**。\n",
+    "\n",
+    "```python\n",
+    "from langgraph.graph import StateGraph\n",
+    "\n",
+    "graph = StateGraph(state_type=MyState)\n",
+    "graph.add_node(\"tool\", run_tool)\n",
+    "graph.set_entry_point(\"tool\")\n",
+    "workflow = graph.compile()\n",
+    "workflow.invoke({\"input\": \"hello\"})\n",
+    "```\n",
+    "\n",
+    "### 特点：\n",
+    "\n",
+    "* 显式流程控制（你决定执行路径）\n",
+    "* 每个步骤是一个 node，状态逐步更新\n",
+    "* 状态结构由 TypedDict 定义\n",
+    "* 支持条件分支、记忆、循环、并行执行等\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 本质区别总结（类比理解）：\n",
+    "\n",
+    "| 类比角度 | create\\_react\\_agent | workflow\\.compile() |\n",
+    "| ---- | -------------------- | ------------------- |\n",
+    "| 像什么  | 像你把 GPT“丢进工具箱”让它自己想  | 像你自己设计一个流程图，每步控制    |\n",
+    "| 控制权  | 语言模型（黑盒）             | 开发者（显式编排）           |\n",
+    "| 适合   | 快速、简单、多轮推理           | 复杂流程、状态追踪、控制流程      |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 举例场景：\n",
+    "\n",
+    "* 想快速构建一个能用搜索引擎回答问题的智能体？\n",
+    "  用 `create_react_agent`\n",
+    "\n",
+    "* 想做一个 agent：先从数据库查数据 → 然后判断结果 → 根据判断选用不同工具 → 最后整理输出？\n",
+    "  用 `workflow.compile()`（LangGraph）\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 结论一句话：\n",
+    "\n",
+    "> `create_react_agent` 是一种 **模型驱动的黑盒 Agent 构建方式**，适合快速构建通用智能体；\n",
+    "> 而 `workflow.compile()` 是 LangGraph 的 **显式流程图构建方式**，适合你需要精细控制每一步逻辑和状态传递的复杂应用。\n",
+    "\n"
    ]
   }
  ],
