Little changes of Agent.ipynb.

--- a/ai_agent_project/Agent.ipynb
+++ b/ai_agent_project/Agent.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "87ea4db6",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "86d9386b-442f-4cd6-a78f-57c88249d3f0",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "7ab50503-d09f-4ff4-9080-5afe297ccc38",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "fcadb699-3787-4028-a5f6-e5605c8118d4",
    "metadata": {},
    "outputs": [
@@ -106,27 +106,26 @@
       "What's the weather where I live?\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  tavily_search (call_5G1ZHd55bHlrk8PpREVG2qep)\n",
-      " Call ID: call_5G1ZHd55bHlrk8PpREVG2qep\n",
+      "  tavily_search (call_F2vbikIm88N2ChfVhaZ0F6yc)\n",
+      " Call ID: call_F2vbikIm88N2ChfVhaZ0F6yc\n",
       "  Args:\n",
       "    query: Zhuhai Guangdong weather\n",
       "    topic: general\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
       "Name: tavily_search\n",
       "\n",
-      "{\"query\": \"Zhuhai Guangdong weather\", \"follow_up_questions\": null, \"answer\": null, \"images\": [], \"results\": [{\"title\": \"Weather in Zhuhai, Guangdong\", \"url\": \"https://www.weatherapi.com/\", \"content\": \"{'location': {'name': 'Zhuhai', 'region': 'Guangdong', 'country': 'China', 'lat': 22.2769, 'lon': 113.5678, 'tz_id': 'Asia/Shanghai', 'localtime_epoch': 1751956328, 'localtime': '2025-07-08 14:32'}, 'current': {'last_updated_epoch': 1751956200, 'last_updated': '2025-07-08 14:30', 'temp_c': 32.2, 'temp_f': 90.0, 'is_day': 1, 'condition': {'text': 'Overcast', 'icon': '//cdn.weatherapi.com/weather/64x64/day/122.png', 'code': 1009}, 'wind_mph': 13.6, 'wind_kph': 22.0, 'wind_degree': 204, 'wind_dir': 'SSW', 'pressure_mb': 1002.0, 'pressure_in': 29.59, 'precip_mm': 0.0, 'precip_in': 0.0, 'humidity': 71, 'cloud': 50, 'feelslike_c': 40.5, 'feelslike_f': 104.9, 'windchill_c': 31.5, 'windchill_f': 88.6, 'heatindex_c': 38.5, 'heatindex_f': 101.3, 'dewpoint_c': 25.2, 'dewpoint_f': 77.4, 'vis_km': 10.0, 'vis_miles': 6.0, 'uv': 9.7, 'gust_mph': 23.3, 'gust_kph': 37.5}}\", \"score\": 0.9548158, \"raw_content\": null}, {\"url\": \"https://wisemeteo.com/en/country/china/region/guangdong-province/city/zhuhai/date/08-07\", \"title\": \"Zhuhai, Guangdong Province - weather outlook for 7 August 2025\", \"content\": \"For Zhuhai they forecast cooler than usual autumn weather. Over a period of the autumn the temperature will go up to 86 °F and down to 64 °F ... Read forecast\", \"score\": 0.95176035, \"raw_content\": null}], \"response_time\": 4.77}\n",
+      "{\"query\": \"Zhuhai Guangdong weather\", \"follow_up_questions\": null, \"answer\": null, \"images\": [], \"results\": [{\"title\": \"Weather in Zhuhai, Guangdong, China\", \"url\": \"https://www.weatherapi.com/\", \"content\": \"{'location': {'name': 'Zhuhai', 'region': 'Guangdong', 'country': 'China', 'lat': 22.2769, 'lon': 113.5678, 'tz_id': 'Asia/Shanghai', 'localtime_epoch': 1751980626, 'localtime': '2025-07-08 21:17'}, 'current': {'last_updated_epoch': 1751980500, 'last_updated': '2025-07-08 21:15', 'temp_c': 30.4, 'temp_f': 86.7, 'is_day': 0, 'condition': {'text': 'Clear', 'icon': '//cdn.weatherapi.com/weather/64x64/night/113.png', 'code': 1000}, 'wind_mph': 12.8, 'wind_kph': 20.5, 'wind_degree': 218, 'wind_dir': 'SW', 'pressure_mb': 1001.0, 'pressure_in': 29.56, 'precip_mm': 0.0, 'precip_in': 0.0, 'humidity': 79, 'cloud': 25, 'feelslike_c': 37.8, 'feelslike_f': 100.0, 'windchill_c': 29.6, 'windchill_f': 85.4, 'heatindex_c': 35.7, 'heatindex_f': 96.3, 'dewpoint_c': 25.3, 'dewpoint_f': 77.5, 'vis_km': 10.0, 'vis_miles': 6.0, 'uv': 0.0, 'gust_mph': 18.1, 'gust_kph': 29.1}}\", \"score\": 0.9955137, \"raw_content\": null}, {\"url\": \"https://world-weather.info/forecast/china/zhuhai/month/\", \"title\": \"Zhuhai 30-Day Weather Forecast\", \"content\": \"30-Day weather forecast in Zhuhai for July, August 2025 is based on analysis ... Tuesday, July 8. +82°. Day. +93°. Moderate rain. Wednesday, July 9. +81°. Day.\", \"score\": 0.95100147, \"raw_content\": null}], \"response_time\": 1.2}\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "The current weather in Zhuhai, Guangdong is as follows:\n",
+      "The current weather in Zhuhai, Guangdong, China is as follows:\n",
       "\n",
-      "- **Temperature**: 32.2°C (90.0°F)\n",
-      "- **Condition**: Overcast\n",
-      "- **Wind**: 22.0 kph (13.6 mph) from the SSW\n",
-      "- **Humidity**: 71%\n",
-      "- **Visibility**: 10 km\n",
-      "- **Feels Like**: 40.5°C (104.9°F)\n",
+      "- **Temperature**: 30.4°C (86.7°F)\n",
+      "- **Condition**: Clear\n",
+      "- **Wind**: 12.8 mph (20.5 kph) from the southwest\n",
+      "- **Humidity**: 79%\n",
+      "- **Feels Like**: 37.8°C (100°F)\n",
       "\n",
-      "For more detailed information, you can check the weather [here](https://www.weatherapi.com/).\n"
+      "For more detailed forecasts, you can check out the [30-Day Weather Forecast for Zhuhai](https://world-weather.info/forecast/china/zhuhai/month/).\n"
      ]
     }
    ],
@@ -154,15 +153,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "76a02d36-6ea2-4e62-88b4-6c480dd9c04f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'query': 'What is the weather in Zhuhai, Guangdong Province, China?', 'follow_up_questions': None, 'answer': None, 'images': [], 'results': [{'title': 'Weather in Zhuhai, Guangdong Province, China', 'url': 'https://www.weatherapi.com/', 'content': \"{'location': {'name': 'Zhuhai', 'region': 'Guangdong', 'country': 'China', 'lat': 22.2769, 'lon': 113.5678, 'tz_id': 'Asia/Shanghai', 'localtime_epoch': 1751957327, 'localtime': '2025-07-08 14:48'}, 'current': {'last_updated_epoch': 1751957100, 'last_updated': '2025-07-08 14:45', 'temp_c': 32.2, 'temp_f': 90.0, 'is_day': 1, 'condition': {'text': 'Overcast', 'icon': '//cdn.weatherapi.com/weather/64x64/day/122.png', 'code': 1009}, 'wind_mph': 13.6, 'wind_kph': 22.0, 'wind_degree': 204, 'wind_dir': 'SSW', 'pressure_mb': 1002.0, 'pressure_in': 29.59, 'precip_mm': 0.0, 'precip_in': 0.0, 'humidity': 71, 'cloud': 50, 'feelslike_c': 40.5, 'feelslike_f': 104.9, 'windchill_c': 31.5, 'windchill_f': 88.6, 'heatindex_c': 38.5, 'heatindex_f': 101.3, 'dewpoint_c': 25.2, 'dewpoint_f': 77.4, 'vis_km': 10.0, 'vis_miles': 6.0, 'uv': 9.7, 'gust_mph': 23.3, 'gust_kph': 37.5}}\", 'score': 0.9718388, 'raw_content': None}, {'url': 'https://tripvenue.com/weather/china/l1790437/zhuhai/august', 'title': 'Weather in Zhuhai in August 2025 - Tripvenue', 'content': 'August weather forecast for Zhuhai, China. Average temperature in August is 27.9 °C. Average daytime temperature is 30.7 °C. Average night temperature is', 'score': 0.90907925, 'raw_content': None}], 'response_time': 4.86}\n"
+     "ename": "ValidationError",
+     "evalue": "1 validation error for TavilySearchAPIWrapper\n  Value error, Did not find tavily_api_key, please add an environment variable `TAVILY_API_KEY` which contains it, or pass `tavily_api_key` as a named parameter. [type=value_error, input_value={}, input_type=dict]\n    For further information visit https://errors.pydantic.dev/2.11/v/value_error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValidationError\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Test of the Tavily search tool\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_tavily\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m TavilySearch\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m search = \u001b[43mTavilySearch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmax_results\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      5\u001b[39m search_results = search.invoke(\u001b[33m\"\u001b[39m\u001b[33mWhat is the weather in Zhuhai, Guangdong Province, China?\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(search_results)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/Code/Python/llm_learning/ai_agent_project/.venv/lib/python3.12/site-packages/langchain_tavily/tavily_search.py:284\u001b[39m, in \u001b[36mTavilySearch.__init__\u001b[39m\u001b[34m(self, **kwargs)\u001b[39m\n\u001b[32m    281\u001b[39m         wrapper_kwargs[\u001b[33m\"\u001b[39m\u001b[33mapi_base_url\u001b[39m\u001b[33m\"\u001b[39m] = kwargs[\u001b[33m\"\u001b[39m\u001b[33mapi_base_url\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m    282\u001b[39m     kwargs[\u001b[33m\"\u001b[39m\u001b[33mapi_wrapper\u001b[39m\u001b[33m\"\u001b[39m] = TavilySearchAPIWrapper(**wrapper_kwargs)\n\u001b[32m--> \u001b[39m\u001b[32m284\u001b[39m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/Code/Python/llm_learning/ai_agent_project/.venv/lib/python3.12/site-packages/langchain_core/tools/base.py:516\u001b[39m, in \u001b[36mBaseTool.__init__\u001b[39m\u001b[34m(self, **kwargs)\u001b[39m\n\u001b[32m    511\u001b[39m     msg = (\n\u001b[32m    512\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33margs_schema must be a subclass of pydantic BaseModel or \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    513\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33ma JSON schema dict. Got: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkwargs[\u001b[33m'\u001b[39m\u001b[33margs_schema\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    514\u001b[39m     )\n\u001b[32m    515\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(msg)\n\u001b[32m--> \u001b[39m\u001b[32m516\u001b[39m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/Code/Python/llm_learning/ai_agent_project/.venv/lib/python3.12/site-packages/langchain_core/load/serializable.py:130\u001b[39m, in \u001b[36mSerializable.__init__\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m    128\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, *args: Any, **kwargs: Any) -> \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    129\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\"\"\"\u001b[39;00m  \u001b[38;5;66;03m# noqa: D419\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m130\u001b[39m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "    \u001b[31m[... skipping hidden 1 frame]\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/Code/Python/llm_learning/ai_agent_project/.venv/lib/python3.12/site-packages/pydantic/main.py:253\u001b[39m, in \u001b[36mBaseModel.__init__\u001b[39m\u001b[34m(self, **data)\u001b[39m\n\u001b[32m    251\u001b[39m \u001b[38;5;66;03m# `__tracebackhide__` tells pytest and some other tools to omit this function from tracebacks\u001b[39;00m\n\u001b[32m    252\u001b[39m __tracebackhide__ = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m253\u001b[39m validated_self = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m__pydantic_validator__\u001b[49m\u001b[43m.\u001b[49m\u001b[43mvalidate_python\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mself_instance\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    254\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m validated_self:\n\u001b[32m    255\u001b[39m     warnings.warn(\n\u001b[32m    256\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mA custom validator is returning a value other than `self`.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m'\u001b[39m\n\u001b[32m    257\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mReturning anything other than `self` from a top level model validator isn\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt supported when validating via `__init__`.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    258\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mSee the `model_validator` docs (https://docs.pydantic.dev/latest/concepts/validators/#model-validators) for more details.\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    259\u001b[39m         stacklevel=\u001b[32m2\u001b[39m,\n\u001b[32m    260\u001b[39m     )\n",
+      "\u001b[31mValidationError\u001b[39m: 1 validation error for TavilySearchAPIWrapper\n  Value error, Did not find tavily_api_key, please add an environment variable `TAVILY_API_KEY` which contains it, or pass `tavily_api_key` as a named parameter. [type=value_error, input_value={}, input_type=dict]\n    For further information visit https://errors.pydantic.dev/2.11/v/value_error"
      ]
     }
    ],
@@ -1041,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "58ed1945",
    "metadata": {},
    "outputs": [
